new improved ui and aditional sevices